app/css/contributor.css
body {
  background: var(--main-bg-color);
  color: var(--main-color);
  font-family: Open Sans;
}

body > div > :last-child {
  margin-bottom: 56px;
}

.contributor-preferences {
  display: grid;
  font-size: 13px;
  grid-gap: 16px 0;
  grid-template: auto / 30% auto 16px;
  letter-spacing: -0.08px;
  padding-top: 30px;
}

.contributor-preferences > div {
  grid-column: 2/-2;
}

.contributor-preferences > div > p {
  margin: 0;
  max-width: 310px;
}

.contributor-preferences > :nth-child(1) {
  grid-column: 1/2;
  grid-row: 1/3;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(6) {
  grid-column: 1/2;
  grid-row: 5/6;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(17) {
  grid-column: 1/2;
  grid-row: 15/16;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(21) {
  grid-column: 1/2;
  grid-row: 18/19;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(25) {
  grid-column: 1/2;
  grid-row: 21/22;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(29) {
  grid-column: 1/2;
  grid-row: 24/25;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(34) {
  grid-column: 1/2;
  grid-row: 28/29;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(39) {
  grid-column: 1/2;
  grid-row: 32/33;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(43) {
  grid-column: 1/2;
  grid-row: 35/36;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(45) {
  grid-column: 1/2;
  grid-row: 36/37;
  padding: 0 16px;
  text-align: right;
}

.contributor-preferences > :nth-child(48) {
  grid-column: 1/2;
  grid-row: 38/39;
  padding: 0 16px;
  text-align: right;
}

